# kartof-play-rust

./: .gitignore  Cargo.toml  README  build.rs  settings.json
node_js/: package.json
src/: main.rs  node_js.rs
src/caching/: cache_anime.rs  cache_home.rs  mod.rs
src/node_js/: get_streaming.js  mod.rs
src/routes/: home.rs  images.rs  mod.rs  player.rs  search.rs  watch.rs
src/scrapers/: mod.rs  timezones.rs
src/scrapers/anime_schedule/: anime_details.rs  anime_schedule.rs  anime_search.rs  mod.rs
src/scrapers/animegg/: anime_details.rs  anime_recent.rs  anime_search.rs  anime_stream.rs  mod.rs
src/scrapers/gogoanime/: anime_details.rs  anime_list.rs  anime_popular.rs  anime_recent.rs  anime_search.rs  anime_stream.rs  anime_streaming_url.rs  mod.rs
src/scrapers/mal/: anime_details.rs  anime_search.rs  mod.rs
src/utils/: caching_info.rs  http.rs  images.rs  mod.rs  mongodb.rs  settings.rs  types.rs
ui/: index.hbs  index.html  player.hbs  player.html  search.hbs  search.html  watch.hbs  watch.html
ui/static/css/: common.css  watch.css
ui/static/js/: common.js  index.js  player.js  watch.js
