[package]
name = "kartof-play-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
choki = "1.0.4"
reqwest = { version = "=0.12.4", features = ["blocking"] }
dojang = "0.1.6"
visdom = "1.0.1"
serde = "1.0.203"
mongodb = {version="2.8.2", default-features = false, features = ["sync"] }
