[package]
name = "kartof-play-rust"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]

choki = "1.0.10"
reqwest = { version = "=0.12.4", features = ["blocking"] }
dojang = "0.1.6"
visdom = "1.0.1"
serde = "1.0.203"
serde_json = "1.0.125"
mongodb = {version="2.8.2", default-features = false, features = ["sync"] }
dotenv = "0.15.0"
chrono = "=0.4.38"
chrono-tz = "0.9.0"
threadpool = "1.8.1"
rand = "0.8.5"
regex = "1.10.6"
urlencoding = "1.0.0"